Modified   public/CMakeLists.txt Modified   public/base/application.cc Modified   public/base/application.h Add        public/log/log.cc Add        public/log/log.h Add        public/log/log_core.cc Add        public/log/log_core.h Add        public/sys/process.cc Add        public/sys/process.h Add        public/util/file.cc Add        public/util/file.h Add        public/util/string.cc Add        public/util/string.h Add        public/util/time.cc Add        public/util/time.h

--- a/public/CMakeLists.txt
+++ b/public/CMakeLists.txt
@@ -15,6 +15,21 @@ set(public_SRC
     base/option.cc
     base/option_set.h
     base/option_set.cc
+    
+    log/log.h
+    log/log.cc
+    log/log_core.h
+    log/log_core.cc
+    
+    sys/process.h
+    sys/process.cc
+    
+    util/file.h
+    util/file.cc
+    util/string.h
+    util/string.cc
+    util/time.h
+    util/time.cc
 )
 
 add_library(public STATIC ${public_SRC})
