Modified   public/CMakeLists.txt Modified   public/base/application.cc Modified   public/base/application.h Modified   public/log/log.cc Modified   public/log/log.h Modified   public/log/log_core.cc Modified   public/log/log_core.h Deleted    public/util/file.cc Deleted    public/util/file.h Modified   public/util/string.cc Modified   public/util/string.h Modified   realmd/application.cc Modified   realmd/application.h Add        public/log/log_file.cc Add        public/log/log_file.h Add        public/sys/file.cc Add        public/sys/file.h

--- a/public/CMakeLists.txt
+++ b/public/CMakeLists.txt
@@ -18,14 +18,16 @@ set(public_SRC
     
     log/log.h
     log/log.cc
+    log/log_file.h
+    log/log_file.cc
     log/log_core.h
     log/log_core.cc
     
     sys/process.h
     sys/process.cc
+    sys/file.h
+    sys/file.cc
     
-    util/file.h
-    util/file.cc
     util/string.h
     util/string.cc
     util/time.h
