Modified   CMakeLists.txt Modified   public/CMakeLists.txt Modified   public/log/log.cc Add        public/net/server_socket.cc Add        public/net/server_socket.h Add        public/net/server_socket_events.h Add        public/net/socket.cc Add        public/net/socket.h Add        public/net/thread.cc Add        public/net/thread.h Add        public/sys/thread.h Add        public/sys/thread_win.cc Add        public/sys/thread_win.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,21 @@ add_definitions(-Wall)
     endif()
 endif()
 
+# third party libraries
+set(BOOST_INC "" CACHE PATH "boost include directory")
+set(BOOST_LIB "" CACHE PATH "boost library directory")
+set(LIBEVENT_INC "" CACHE PATH "libevent include directory")
+set(LIBEVENT_LIB "" CACHE PATH "libevent library directory")
+
 include_directories(
+    ${BOOST_INC}
+    ${LIBEVENT_INC}
     ${PROJECT_SOURCE_DIR}
+)
+
+link_directories(
+    ${BOOST_LIB}
+    ${LIBEVENT_LIB}
 )
 
 add_subdirectory(public)
