Modified   public/CMakeLists.txt Modified   public/log/log.cc Modified   public/log/log.h Modified   public/net/server_socket.cc Modified   public/net/server_socket.h Modified   public/net/socket.cc Modified   public/net/tcp_server.cc Modified   public/net/tcp_server.h Modified   public/net/thread.cc Modified   public/net/thread.h Modified   public/sys/thread_win.cc Modified   realmd/CMakeLists.txt Modified   realmd/application.cc Modified   realmd/application.h Modified   realmd/main.cc Add        public/sys/lock_guard.h Add        public/sys/mutex.h Add        public/sys/mutex_win.h Add        public/sys/net.h Add        realmd/net/user_impl_socket.cc Add        realmd/net/user_impl_socket.h Add        realmd/net/user_impl_socket_factory.h

--- a/public/CMakeLists.txt
+++ b/public/CMakeLists.txt
@@ -28,6 +28,9 @@ set(public_SRC
     sys/file.h
     sys/file.cc
     sys/thread.h
+    sys/mutex.h
+    sys/lock_guard.h
+    sys/net.h
     
     util/string.h
     util/string.cc
@@ -50,6 +53,7 @@ if (WIN32)
 set(plat_SRC
     sys/thread_win.h
     sys/thread_win.cc
+    sys/mutex_win.h
 )
 else()
 endif()
